# NetWork_CourseDesign

./: .mailmap  CMakeLists.txt  README.md
build-gcc/: .ninja_deps  .ninja_log
docx/: ~$算机网络课程设计》指导书.doc  《计算机网络课程设计》指导书.doc  《计算机网络课程设计》要求.docx
include/: datalink_sim.h  ftp_app.h  network_io.h  protocol_structs.h  utils.h
src/: datalink_sim.c  ftp_client.c  ftp_server.c  main.c  network_io.c  protocol_parser.c  utils.c
